--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -26,9 +26,9 @@
 		<img class="software-icon" src="/resources/icons/git.png">
 	</h3>
 	
-	<div class="webvid verticalvid" style="padding:70.3125% 0 0 0;">
-		<iframe src="https://player.vimeo.com/video/1050839856
-		?h=dddc621&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
+	<div class="webvid">
+		<iframe src="https://player.vimeo.com/video/1071128174?h=b5528c5699
+		?h=dddc621&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1#t=9s"
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
