--- a/portfolio/courthouse.html
+++ b/portfolio/courthouse.html
@@ -19,7 +19,7 @@
 
 	<h1>Projection mapping</h1>
 	<h3>
-		Custom motion graphics for a local food and music festival
+		with bespoke motion graphics
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/realitycapture.png">
@@ -30,17 +30,16 @@
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	
-	<p>Thanks to 
-	<a href="https://snebtor.org/" target="_blank">
-	Esteban Garcia Bravo ➔</a>,
-	I had the opportunity to create several projection-mapped motion graphics 
-	for a local food & music festival in the summer of 2024. 
-		
-	<p>I captured and generated a mesh of the courthouse
-	using RealityCapture and created animations following the mesh.
+	Motion graphics I created on top of a rough 3D scan I took of the <br>
+	<a href="https://en.wikipedia.org/wiki/Tippecanoe_County_Courthouse" target="_blank">
+	Tippecanoe County Courthouse ➔</a>
 	
-	<p>Unfortunately the projectionist brought the wrong lens, 
-	so we could only cover a fraction of the area that we intended. 
+	<p>Project lead by  
+	<a href="https://snebtor.org/" target="_blank">
+	Esteban Garcia Bravo ➔</a>
+	
+	<p>I designed these to cover the entire facade, but the
+	projectionist didn't have a wide enough lens.
 	
 	<p><a href="courthouse/neon.png" target="_blank">
 	<img src="courthouse/neon.png"></a>
