--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -19,7 +19,7 @@
 
 	<h1>Global game jam 2024</h1>
 	<h3>
-		A clown-wrangling VR game made in 48 hours by a team of 3
+		Made in 48 hours by a team of 3
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
@@ -37,7 +37,7 @@
 	</div>
 	
 	<p>
-		I was responsible for the lasso manipulation & interaction as well as the environment graphics.
+		Responsible for the lasso manipulation & interaction as well as the environment graphics.
 		Made together with 
 		<a href="https://jake-white.github.io/" target="_blank">
 		Jake White  ➔</a>
@@ -45,7 +45,6 @@
 		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
 		George Takahashi  ➔</a>,
 		this is a game we call <i>Learn the Ropes</i>.
-		We built this game in 48 hours for Global Game Jam 2024 using Unity.
 	</p>
 	<p>
 		Part of its namesake comes from its admittedly difficult technique-based gameplay.
@@ -55,26 +54,24 @@
 	<h2>Lasso interaction</h2>
 	
 	<p>
-		Given the jam time constraint, 
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">
 		Obi Rope  ➔</a>
 		is responsible for the rope physics. 
 	</p>
 	
 	<p>
-		You can't drop the lasso, but a custom physics constraint lets it 
+		A custom physics constraint lets the rope 
 		slip through your hands when you're not gripping it. 
-		This prevents you from dropping or losing the rope
-		but still lets you manipulate it with natural hand gestures.
+		You manipulate it with natural hand gestures.
 	</p>
 	
 	<a href="lasso/playing.jpg" target="_blank"><img src="lasso/playing.jpg"></a>
 	
 	<p>
-		The lasso's speed modulates the volume and pitch of a spatial 'swoosh' 
-		sound. This provides natural awareness of the rope's speed and position
-		in lieu of force feedback, 
-		and its fun to hear it whiz around your head.
+		Lasso end's speed controls volume and pitch of a spatial 'swoosh' 
+		sound, providing natural awareness of the rope's speed and position
+		in lieu of force feedback.
+		I love hearing it whiz around my head.
 	</p>
 	
 	<h2>Environment</h2>
@@ -82,7 +79,7 @@
 	<a href="lasso/scene.png" target="_blank"><img src="lasso/scene.png"></a>
 	
 	<p>
-		The terrain is just a 360 CC0 environment from 
+		Terrain is just a 360 CC0 environment from 
 		<a href="https://polyhaven.com/" target="_blank">PolyHaven  ➔</a>
 		reprojected onto a mesh initially generated using 
 		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth  ➔</a>.
@@ -91,7 +88,7 @@
 	</p>
 	<p>
 		Because of how simple the graphics are, the game renders at a 
-		crisp 3000x3000+ resolution, much higher than default.
+		crisp 3000x3000+ resolution.
 	</p>
 	
 	<h2>Download &amp; source</h2>
@@ -101,11 +98,6 @@
 		Github ➔</a> or 
 		<a href="https://globalgamejam.org/games/2024/learn-ropes-1" target="_blank">
 		Global Game Jam ➔</a>.
-		We have loose plans to develop the game further and support other platforms.
-	</p>
-	
-	<p>
-		Completed early 2024
 	</p>
 	
 </main>
