--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -19,7 +19,7 @@
 
 	<h1>Animations</h1>
 	<h3>
-		Fragments from work-in-progress projects
+		Fragment from work-in-progress project
 		<p>
 		<img class="software-icon" src="/resources/icons/blender.png">
 		<img class="software-icon" src="/resources/icons/substance.png">
@@ -34,10 +34,8 @@
 			allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<p>
-		This is a test for a simple animation about
-		an adventurous snowman who visits the desert. 
 		I've got a simple story in mind but only have this one shot done.
-		The scorpion model is a placeholder.
+		The scorpion model is a placeholder made by a friend.
 	</p>
 
 	<br>
