--- a/portfolio/surveymeter.html
+++ b/portfolio/surveymeter.html
@@ -36,7 +36,8 @@
 	</div>
 	
 	<p>
-		This page is a work in progress!
+		This page is a work in progress, 
+		but the attached video shows the gist of it.
 	</p>
 	
 	<a href="surveymeter/survey meter.png"><img src="surveymeter/survey meter.png"></a>
