dont start lasertag video late

--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -28,7 +28,7 @@
 	
 	<div class="webvid">
 		<iframe src="https://player.vimeo.com/video/1071128174?h=b5528c5699
-		?h=dddc621&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1#t=9s"
+		?h=dddc621&autoplay=1&loop=1&color=fee400&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture" 
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
