--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Julian Triveri Portfolio</title>
 	<link rel="stylesheet" href="/resources/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
 <main>
 
 	<h1>Mocap sabers</h1>
-	
+
 	<h3>
 		Beat up your friend with foam swords on an OptiTrack stage
 		<p>
@@ -29,75 +29,73 @@
 		<img class="software-icon" src="/resources/icons/polyhaven.png">
 		<img class="software-icon" src="/resources/icons/ambientcg.png">
 	</h3>
-	
+
 	<div class="webvid">
 		<iframe src="https://www.youtube.com/embed/IgpgE4URJyo"
 			allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
 			allowfullscreen></iframe>
 	</div>
 	<p>
-		Prototype where two players fight with foam swords 
-		on a motion capture stage. 
-		Virtual graphics overlayed onto physical play.
+		Prototype game where motion captured players and swords
+		drive VR visuals.
 	</p>
-	
+
 	<a href="mocap/fight2.png" target="_blank"><img src="mocap/fight2.png"></a>
-	
+
 	<br>
 	<br>
-	
+
 	<div>
 	<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">I work with some pretty awesome people. VR light saber battles at the <a href="https://twitter.com/PurdueRCAC?ref_src=twsrc%5Etfw">@PurdueRCAC</a> Envision Center 20th anniversary open house today 🤖 ⚔️ <br><br>Best use of PVC pipe and pool noodles that I’ve ever seen, but the VR goggles and mocap suit obviously take it to a whole other level 👌🏼 <a href="https://t.co/jqHgVm2TUJ">pic.twitter.com/jqHgVm2TUJ</a></p>&mdash; Paul Branham (@BoilerPaulie) <a href="https://twitter.com/BoilerPaulie/status/1780627497240895618?ref_src=twsrc%5Etfw">April 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
-	
+
 	<h2>Tracking &amp; calibration</h2>
-	
+
 	<a href="mocap/fight.jpg" target="_blank"><img src="mocap/fight.jpg"></a>
-	
+
 	<p>
 		OptiTrack's
 		official plugin for Unity does not support 1:1 skeletal
-		tracking or Android &amp; Meta Quest. 
+		tracking or Android &amp; Meta Quest.
 		I couldn't use it for this.
-	
+
 	<p>
-		I instead modified an old 
+		I instead modified an old
 		<a href="https://github.com/XmanLCH/MotiveDirect" target="_blank">
-			third-party plugin compatible with Android ➔</a> 
+			third-party plugin compatible with Android ➔</a>
 		to support 1:1 skeletal tracking.
 	</p>
-	
+
 	<a href="mocap/swords.jpg" target="_blank"><img src="mocap/swords.jpg"></a>
-	
+
 	<p>
 		The markers on the headset are only for initial stage calibration.
 		I still rely on Quest's native tracking.
 	</p>
-	
-	
+
+
 	<a href="mocap/snapshot1.png" target="_blank"><img src="mocap/snapshot1.png"></a>
-	
+
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
-	
+
 	<p>
-		I threw together several CC0 assets from 
+		I threw together several CC0 assets from
 		<a href="https://polyhaven.com" target="_blank">PolyHaven.com ➔</a>
 		and <a href="https://ambientcg.com" target="_blank">AmbientCG.com ➔</a>
 		to create a placeholder lava planet environment.
-		The robot model is a 
+		The robot model is a
 		<a href="https://assetstore.unity.com/packages/3d/characters/robots/robot-kyle-urp-4696" target="_blank">
 			Unity standard asset ➔</a>.
 	</p>
-	
+
 	<h2>Thanks</h2>
 	<p>
+		Huge thanks to
 		<a href="https://fizzyapple12.com/" target="_blank">Hazel ➔</a>
 		&
 		<a href="https://www.matthewstanciu.com/" target="_blank">Matthew ➔</a>
-		for testing and also coming on a midnight run 
-		to Dicks' sporting goods to buy 
-		overpriced pool noodles for prototype swords. 
-		Thank you!
+		for testing and helping buy
+		pool noodles and PVC pipe.
 	</p>
 
 </main>
